Added Run or Shine to portfolio, CycleTrac will now be an iOS Application

--- a/index.html
+++ b/index.html
@@ -115,11 +115,18 @@
 
 <div id="box" class="center-div">
     <div id = "main-content" class="container">
+
+      <div style = "text-align: center width:300px height: 300px">
+        <img src="images/Icon-App-60x60@3x.png" alt="Run or Shine Icon" class="img-responsive">
+      </div>
+      <p> Run or Shine is an iOS application that displays current weather and suggests clothes to wear for a run outside. Status: In Development
+      </p>
+      <br>
       <div style ="text-align: center">
           <img id="cycleTracLogo" src="images/Cycle-trac.png" alt="Cycle-Trac Logo"
           class="img-responsive">
         </div>
-        <p>Cycle-Trac is a web application that tracks playlists created for each cycling class. Status: In Development
+        <p>Cycle-Trac is an iOS application that tracks playlists created for each cycling class. Status: In Development
         </p>
         <br>
 
@@ -127,8 +134,8 @@
           <a id = "bloglink" href="http://ryan96db.com" target = "_blank">here!</a>
         </p>
 
-        <br>
-        <br>
+        
+
          
      </div>
 </div>
