--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
             <div class="navbar-brand">
             <h1>Ryan DeBose-Boyd</h1></div>
 
-            <div class="pull-right hidden-xs">
+            <!-- <div class="pull-right hidden-xs">
                     <form class="navbar-form navbar-right" role="search">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Search this website...">
@@ -51,7 +51,7 @@
                     </button>
                     </form>
   </div>
-
+ -->
   <!-- Collapse button -->
            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
