--- a/about.html
+++ b/about.html
@@ -110,12 +110,15 @@
 <div id="box" class="center-div">
     <div id = "main-content" class="container">
       <div style ="display: inline-block; width: 200px; height: 200px">
-          <img id="Ryanpicture" src="images/Profile.png" alt="Picture of Ryan" 
+          <img id="Ryanpicture" src="images/Profile.JPG" alt="Picture of Ryan" 
           class="img-responsive">
+
         </div>
 
-          <p>I'm Ryan DeBose-Boyd, and I am breaking into the world of software development. This website will document my progress as I make this career change. In my free time, you can find me either running or playing video games. 
+         <p id="aboutme">I'm Ryan DeBose-Boyd, and I am breaking into the world of software development. This website will document my progress as I make this career change. In my free time, you can find me either running or playing video games. 
         </p>
+
+          
       
 </div>
 
