--- a/cv.html
+++ b/cv.html
@@ -71,7 +71,7 @@
           <div class="row">
 
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
-            <a id="centerglyphicons" href="#">
+            <a id="centerglyphicons" href="portfolio.html">
               <span class="glyphicon glyphicon-folder-open"></span><br class="hidden-xs hidden-sm">  Portfolio</a>
           </div>
 
