Update projects, update resume, move blog link to navbar.

--- a/portfolio.html
+++ b/portfolio.html
@@ -123,8 +123,8 @@
           <img id="cycleTracLogo" src="images/Cycle-trac.png" alt="Cycle-Trac Logo"
           class="img-responsive">
         </div>
-        <p>Cycle-Trac is an iOS application that tracks playlists created for each cycling class. Status: In Development
-        </p>
+        <p>Cycle-Trac is a web application that was built to conveniently track my cycling workouts/playlists from class to class.</p>
+        <p>Technologies used: Ruby on Rails</p>
         <br>
 
         <p> Blog: Keep up with my life experiences, and my progress on various tech projects. Check out 
