--- a/cv.html
+++ b/cv.html
@@ -71,8 +71,8 @@
           <div class="row">
 
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
-            <a id="centerglyphicons" href="portfolio.html">
-              <span class="glyphicon glyphicon-folder-open"></span><br class="hidden-xs hidden-sm">  Portfolio</a>
+            <a id="centerglyphicons" href="http://ryan96db.com" target = "_blank">
+              <span class="glyphicon glyphicon-book"></span><br class="hidden-xs hidden-sm">  Blog</a>
           </div>
 
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
