Update technologies on Sweet T's website.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <br>
                <p id="workinfo">Sweet T's Grill & Sno Cones is a recently established restaurant located in Idabel, Oklahoma.</p>
       
-               <p id="workdivtech">Technologies/Frameworks used: HTML, CSS, Javascript, Bootstrap.</p>
+               <p id="workdivtech">Technologies/Frameworks used: HTML, CSS, Javascript, Bootstrap, and PHP.</p>
         
               <div id="workdiv">
                 <div ><a id="worklink" href="http://www.sweettsidabelok.com" target = "_blank">Visit Site
