Add App Store Link to home page and resume

--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 
            <div id="menu-tile">
               <img class="img-responsive" src="images/Icon-App-60x60@3x.png" height= "250" style="border: 0">
-               <p id="workinfo">Run or Shine is an iOS application that displays current weather and suggests clothes to wear for a run outside. <br>Status: In Development</p>
+               <p id="workinfo">Run or Shine is an iOS application that displays current weather and suggests clothes to wear for a run outside. </p>
       
                <p id="workdivtech">Technologies/Frameworks used: Swift</p>
         
               <div id="workdiv">
-                <div ><a id="worklink" href="https://github.com/ryan96db/RunorShine/tree/currentWeatherRedesign" target = "_blank">Visit Site
+                <div ><a id="worklink" href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1454315650&mt=8" target = "_blank">Visit Site
                 </div></a>
 
               </div>
