--- a/portfolio.html
+++ b/portfolio.html
@@ -116,7 +116,7 @@
       <div style = "text-align: center width:300px height: 300px">
         <img src="images/Icon-App-60x60@3x.png" alt="Run or Shine Icon" class="img-responsive">
       </div>
-      <p> Run or Shine is an iOS application that displays current weather and suggests clothes to wear for a run outside. Status: In Development
+      <p> Run or Shine is an iOS application that displays current weather and suggests clothes to wear for a run outside.
       </p>
       <br>
       <div style ="text-align: center">
