--- a/cv.html
+++ b/cv.html
@@ -62,8 +62,7 @@
 <div class = "container-fluid">
       <div id="collapsable-nav" class="collapse navbar-collapse">
         <!-- <ul id="nav-list" class="nav navbar-nav navbar-center"> -->
-
-          <li class="visible-xs active">
+<li class="visible-xs active">
             <a id = "centerglyphicons" href="index.html">
               <span class="glyphicon glyphicon-home"></span><br class="hidden-xs hidden-sm"> Home</a>
           </li>
@@ -71,8 +70,8 @@
           <div class="row">
 
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
-            <a id="centerglyphicons" href="http://ryan96db.com" target = "_blank">
-              <span class="glyphicon glyphicon-book"></span><br class="hidden-xs hidden-sm">  Blog</a>
+            <a id="centerglyphicons" href="portfolio.html">
+              <span class="glyphicon glyphicon-book"></span><br class="hidden-xs hidden-sm">  Portfolio</a>
           </div>
 
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
