--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
           <div class="row">
 
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
-            <a id="centerglyphicons" href="http://ryan96db.com" target = "_blank">
-              <span class="glyphicon glyphicon-book"></span><br class="hidden-xs hidden-sm">  Blog</a>
+            <a id="centerglyphicons" href="portfolio.html">
+              <span class="glyphicon glyphicon-book"></span><br class="hidden-xs hidden-sm">  Portfolio</a>
           </div>
 
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
@@ -155,14 +155,6 @@
               </div>
 
           </div>
-
-        <!-- <br>
-        <br>
-
-        <p> Blog: Keep up with my life experiences, and my progress on various tech projects. Check out 
-          <a id = "bloglink" href="http://ryan96db.com" target = "_blank">here!</a>
-        </p> -->
-
         
 
          
