--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
 
         </div>
 
-         <p id="aboutme">I'm Ryan DeBose-Boyd, and I am breaking into the world of software development. This website will document my progress as I make this career change. In my free time, you can find me either running or playing video games. 
+         <p id="aboutme">I'm Ryan DeBose-Boyd, and I am breaking into the world of bioinformatics/software development. This website will document my progress as I make this career change. In my free time, you can find me either running or playing video games. 
         </p>
 
           
