--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
 
         </div>
 
-         <p id="aboutme">I'm Ryan DeBose-Boyd, and I am breaking into the world of bioinformatics/software development. This website will document my progress as I make this career change. In my free time, you can find me either running or playing video games. 
+         <p id="aboutme">My name is Ryan DeBose-Boyd, and I am transitioning into the world of bioinformatics. I am applying for Bioinformatics/Computational Biology graduate programs for Fall 2020. In my free time, you can find me either running or playing video games. 
         </p>
 
           
