Update About Page and HomePage

--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
 
         </div>
 
-         <p id="aboutme">My name is Ryan DeBose-Boyd, and I am transitioning into the world of software development. In my free time, you can find me either running or playing video games. 
+         <p id="aboutme">My name is Ryan DeBose-Boyd, and I am starting a PhD program in Computational Biology this fall. In my free time, you can find me either running or playing video games. 
         </p>
 
           
