--- a/portfolio.html
+++ b/portfolio.html
@@ -120,9 +120,11 @@
                <p id="workinfo">Sweet T's Grill & Sno Cones is a recently established restaurant located in Idabel, Oklahoma.</p>
       
                <p id="workdivtech">Technologies/Frameworks used: HTML, CSS, Javascript, Bootstrap, and PHP.</p>
+
+               <p id="workinfo">Status: Webiste taken down by owner.</p>
         
               <div id="workdiv">
-                <div ><a id="worklink" href="http://www.sweettsidabelok.com" target = "_blank">Visit Site
+                <div ><a id="worklink" href="https://github.com/ryan96db/SweetTs" target = "_blank">Check out Code Here
                 </div></a>
 
               </div>
