Remove footer, add social media side-bar

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
 </head>
 <body class="Site">
+
+
   <article>
 
   <!--navigation bar -->
@@ -111,6 +113,18 @@
 <!-- <div id="box" class="center-div"> -->
 <div id = "main-content" class="container">
 
+  <!-- Load font awesome icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <!-- The social media icon bar -->
+  <div class="icon-bar">
+    <a id="facebook" href="https://www.facebook.com/ryan.deboseboyd" target="_blank"><i class="fa fa-facebook"></i></a>
+    <a id = "twitter" href="https://twitter.com/ryandb96" target="_blank"><i class="fa fa-twitter"></i></a>
+    <a id = "instagram" href="https://www.instagram.com/ryandb96/" target="_blank"><i class="fa fa-instagram"></i></a>
+    <a id = "github" href="https://github.com/ryan96db" target="_blank"><i class="fa fa-github"></i></a>
+    <a id = "linkedin" href="https://www.linkedin.com/in/ryan-debose-boyd-aba026171" target="_blank"><i class="fa fa-linkedin"></i></a>
+  </div>
+
 
           <div id="menu-tile">
               <img class="img-responsive" src="images/SweetTsScreenshot.png" style="border: 0">
@@ -168,19 +182,7 @@
 
 </main>
 <!-- end of main content -->
-
-<footer class="panel-footer">
-  <div class="container text-center">
   
-    <a href="https://www.facebook.com/ryan.deboseboyd" target="_blank"><i class="fa fa-facebook"></i></a>
-    <a href="https://twitter.com/ryandb96" target="_blank"><i class="fa fa-twitter"></i></a>
-    <a href="https://www.instagram.com/ryandb96/" target="_blank"><i class="fa fa-instagram"></i></a>
-    <a href="https://github.com/ryan96db" target="_blank"><i class="fa fa-github"></i></a>
-    <a href="https://www.linkedin.com/in/ryan-debose-boyd-aba026171" target="_blank"><i class="fa fa-linkedin"></i></a>
-
-  </div>
-
-</footer>   
 
 <br>
 <br>
@@ -199,6 +201,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
+
+ 
 
 
 
