Make Side-Bar Icons Responsive from 767px

--- a/index.html
+++ b/index.html
@@ -134,10 +134,9 @@
       
                <p id="workdivtech">Technologies/Frameworks used: HTML, CSS, Javascript, Bootstrap, and PHP.</p>
 
-               <p id="workinfo">Status: Webiste taken down by owner.</p>
         
               <div id="workdiv">
-                <div ><a id="worklink" href="https://github.com/ryan96db/SweetTs" target = "_blank">Check out Code Here
+                <div ><a id="worklink" href="https:sweettsidabelok.herokuapp.com" target = "_blank">Visit Site
                 </div></a>
 
               </div>
