Update CV, Media Queries for Social Media Icons

--- a/about.html
+++ b/about.html
@@ -109,6 +109,19 @@
 
 <div id="box" class="center-div">
     <div id = "main-content" class="container">
+
+      <!-- Load font awesome icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <!-- The social media icon bar -->
+  <div class="icon-bar">
+    <a id="facebook" href="https://www.facebook.com/ryan.deboseboyd" target="_blank"><i class="fa fa-facebook"></i></a>
+    <a id = "twitter" href="https://twitter.com/ryandb96" target="_blank"><i class="fa fa-twitter"></i></a>
+    <a id = "instagram" href="https://www.instagram.com/ryandb96/" target="_blank"><i class="fa fa-instagram"></i></a>
+    <a id = "github" href="https://github.com/ryan96db" target="_blank"><i class="fa fa-github"></i></a>
+    <a id = "linkedin" href="https://www.linkedin.com/in/ryan-debose-boyd-aba026171" target="_blank"><i class="fa fa-linkedin"></i></a>
+  </div>
+  
       <div style ="display: inline-block; width: 200px; height: 200px">
           <img id="Ryanpicture" src="images/Profile.JPG" alt="Picture of Ryan" 
           class="img-responsive">
