--- a/cv.html
+++ b/cv.html
@@ -104,16 +104,29 @@
 <!-- main content -->
 
 
-<div id="titles">Resume</div>
+<div id="titles">Curriculum Vitae</div>
 
 <div id="box" class="center-div">
     <div id = "main-content" class="container">
-      <p>Download my résumé below:
+
+      <!-- Load font awesome icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <!-- The social media icon bar -->
+  <div class="icon-bar">
+    <a id="facebook" href="https://www.facebook.com/ryan.deboseboyd" target="_blank"><i class="fa fa-facebook"></i></a>
+    <a id = "twitter" href="https://twitter.com/ryandb96" target="_blank"><i class="fa fa-twitter"></i></a>
+    <a id = "instagram" href="https://www.instagram.com/ryandb96/" target="_blank"><i class="fa fa-instagram"></i></a>
+    <a id = "github" href="https://github.com/ryan96db" target="_blank"><i class="fa fa-github"></i></a>
+    <a id = "linkedin" href="https://www.linkedin.com/in/ryan-debose-boyd-aba026171" target="_blank"><i class="fa fa-linkedin"></i></a>
+  </div>
+
+      <p>Download my CV below:
         </p>
-        <a href="files/Resume.docx">
+        <a href="files/Ryan_DeBose-Boyd_Curriculum_ Vitae.docx">
           <i id="resumefiles" class="fa fa-file-word-o" >Word&nbsp&nbsp&nbsp&nbsp</i>
         </a>
-         <a  href="files/Resume.pdf">
+         <a  href="files/Ryan_DeBose-Boyd_Curriculum_ Vitae.pdf">
           <i id="resumefiles" class="fa fa-file-pdf-o"> PDF </i>
           </a>
        
