--- a/portfolio.html
+++ b/portfolio.html
@@ -112,6 +112,17 @@
 <br>
 <div id="box" class="center-div">
     <div id = "main-content" class="container">
+      <!-- Load font awesome icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <!-- The social media icon bar -->
+  <div class="icon-bar">
+    <a id="facebook" href="https://www.facebook.com/ryan.deboseboyd" target="_blank"><i class="fa fa-facebook"></i></a>
+    <a id = "twitter" href="https://twitter.com/ryandb96" target="_blank"><i class="fa fa-twitter"></i></a>
+    <a id = "instagram" href="https://www.instagram.com/ryandb96/" target="_blank"><i class="fa fa-instagram"></i></a>
+    <a id = "github" href="https://github.com/ryan96db" target="_blank"><i class="fa fa-github"></i></a>
+    <a id = "linkedin" href="https://www.linkedin.com/in/ryan-debose-boyd-aba026171" target="_blank"><i class="fa fa-linkedin"></i></a>
+  </div>
 
       <div id="menu-tile">
               <img class="img-responsive" src="images/SweetTsScreenshot.png" style="border: 0">
@@ -121,10 +132,9 @@
       
                <p id="workdivtech">Technologies/Frameworks used: HTML, CSS, Javascript, Bootstrap, and PHP.</p>
 
-               <p id="workinfo">Status: Webiste taken down by owner.</p>
         
               <div id="workdiv">
-                <div ><a id="worklink" href="https://github.com/ryan96db/SweetTs" target = "_blank">Check out Code Here
+                <div ><a id="worklink" href="https:sweettsidabelok.herokuapp.com" target = "_blank">Visit Site
                 </div></a>
 
               </div>
